gcc/testsuite/g++.dg/eh/catch3.C
// PR c++/28250
// { dg-do compile }

template<int> void foo()
{
  try {}
  catch () {}  // { dg-error "type-specifier" }
}

template void foo<0>();
